# travellingthiefsolver

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: build.yml
include/travellingthiefsolver/packing_while_travelling/: algorithm.hpp  instance.hpp  instance_builder.hpp  solution_builder.hpp
include/travellingthiefsolver/thief_orienteering/: algorithm_formatter.hpp  instance.hpp  solution.hpp
include/travellingthiefsolver/travelling_thief/: algorithm_formatter.hpp  instance_builder.hpp  utils.hpp
include/travellingthiefsolver/travelling_while_packing/: algorithm_formatter.hpp  instance.hpp  instance_builder.hpp  solution.hpp
packingwhiletravellingsolver/: BUILD  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  solution.cpp  solution.hpp  utils.cpp  utils.hpp
packingwhiletravellingsolver/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  dynamic_programming.cpp  dynamic_programming.hpp  efficient_local_search.cpp  efficient_local_search.hpp  greedy.cpp  greedy.hpp  large_neighborhood_search.cpp  large_neighborhood_search.hpp  sequential_value_correction.cpp  sequential_value_correction.hpp
scripts/: download_data.py  run_tests.py  visualize_solution.py
scripts/travellingthief/: process_tests.py  run_tests.py  run_tests_local_search.py
src/: CMakeLists.txt
src/packing_while_travelling/: CMakeLists.txt  instance.cpp  instance_builder.cpp  main.cpp  reduction.cpp  solution.cpp  utils.cpp
src/packing_while_travelling/algorithms/: CMakeLists.txt  dynamic_programming.cpp  efficient_local_search.cpp  large_neighborhood_search.cpp  sequential_value_correction.cpp
src/thief_orienteering/: CMakeLists.txt  algorithm_formatter.cpp  instance_builder.cpp
src/thief_orienteering/algorithms/: CMakeLists.txt  tree_search.cpp
src/travelling_thief/: CMakeLists.txt  algorithm_formatter.cpp  instance_builder.cpp  main.cpp
src/travelling_thief/algorithms/: CMakeLists.txt  iterative_tsp_pwt.cpp  iterative_tsp_pwt_ttp.cpp  large_neighborhood_search.cpp
src/travelling_while_packing/: CMakeLists.txt  algorithm_formatter.cpp  instance.cpp  instance_builder.cpp  main.cpp
src/travelling_while_packing/algorithms/: CMakeLists.txt
test/: CMakeLists.txt
thieforienteeringsolver/: BUILD  checker.cpp  instance.cpp  instance.hpp  main.cpp  solution.cpp  solution.hpp
thieforienteeringsolver/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  local_search.cpp  local_search.hpp  tree_search.cpp  tree_search.hpp
travellingthiefsolver/: BUILD  checker.cpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  solution.cpp  solution.hpp  solution2instances.cpp  utils.cpp  utils.hpp  variables.bzl
travellingthiefsolver/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  efficient_local_search.cpp  efficient_local_search.hpp  iterative_tsp_pwt.cpp  iterative_tsp_pwt.hpp  iterative_tsp_pwt_ttp.cpp  iterative_tsp_pwt_ttp.hpp  local_search.cpp  local_search.hpp  tree_search.cpp  tree_search.hpp
travellingthiefsolver/packing_while_travelling/: BUILD  algorithm_formatter.cpp  algorithm_formatter.hpp  reduction.hpp  solution.hpp  solution_builder.cpp  utils.hpp
travellingthiefsolver/packing_while_travelling/algorithms/: BUILD  dynamic_programming.hpp  efficient_local_search.hpp  greedy.cpp  sequential_value_correction.hpp
travellingthiefsolver/packingwhiletravelling/: BUILD  algorithm.hpp  algorithm_formatter.cpp  algorithm_formatter.hpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  reduction.cpp  reduction.hpp  solution.cpp  solution.hpp  solution_builder.cpp  solution_builder.hpp  utils.cpp  utils.hpp
travellingthiefsolver/packingwhiletravelling/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  dynamic_programming.cpp  dynamic_programming.hpp  efficient_local_search.cpp  efficient_local_search.hpp  greedy.cpp  greedy.hpp  large_neighborhood_search.cpp  large_neighborhood_search.hpp  sequential_value_correction.cpp  sequential_value_correction.hpp
travellingthiefsolver/thief_orienteering/: BUILD  checker.cpp  instance.cpp  instance_builder.hpp  main.cpp  solution.cpp
travellingthiefsolver/thief_orienteering/algorithms/: BUILD  local_search.cpp  local_search.hpp  tree_search.hpp
travellingthiefsolver/thieforienteering/: BUILD  algorithm_formatter.cpp  algorithm_formatter.hpp  checker.cpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  solution.cpp  solution.hpp
travellingthiefsolver/thieforienteering/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  local_search.cpp  local_search.hpp  tree_search.cpp  tree_search.hpp
travellingthiefsolver/travelling_thief/: BUILD  checker.cpp  instance.cpp  instance.hpp  solution.cpp  solution.hpp  solution2instances.cpp  utils.cpp
travellingthiefsolver/travelling_thief/algorithms/: BUILD  efficient_local_search.cpp  efficient_local_search.hpp  local_search.cpp  local_search.hpp  tree_search.cpp
travellingthiefsolver/travelling_while_packing/: BUILD  solution.cpp
travellingthiefsolver/travelling_while_packing/algorithms/: BUILD  local_search.cpp  local_search.hpp
travellingthiefsolver/travellingthief/: BUILD  algorithm_formatter.cpp  algorithm_formatter.hpp  checker.cpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  solution.cpp  solution.hpp  solution2instances.cpp  utils.cpp  utils.hpp
travellingthiefsolver/travellingthief/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  efficient_local_search.cpp  efficient_local_search.hpp  iterative_tsp_pwt.cpp  iterative_tsp_pwt.hpp  iterative_tsp_pwt_ttp.cpp  (+7 more)
travellingthiefsolver/travellingwhilepacking/: BUILD  algorithm_formatter.cpp  algorithm_formatter.hpp  instance.cpp  instance.hpp  instance_builder.cpp  instance_builder.hpp  main.cpp  solution.cpp  solution.hpp
travellingwhilepackingsolver/: BUILD  instance.cpp  instance.hpp  main.cpp  solution.cpp  solution.hpp
travellingwhilepackingsolver/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  local_search.cpp  local_search.hpp
(+13 files in other folders)
