add_library(TravellingThiefSolver_packing_while_travelling_greedy)
target_sources(TravellingThiefSolver_packing_while_travelling_greedy PRIVATE
    greedy.cpp)
target_include_directories(TravellingThiefSolver_packing_while_travelling_greedy PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TravellingThiefSolver_packing_while_travelling_greedy PUBLIC
    TravellingThiefSolver_packing_while_travelling)
add_library(TravellingThiefSolver::packing_while_travelling::greedy ALIAS TravellingThiefSolver_packing_while_travelling_greedy)

add_library(TravellingThiefSolver_packing_while_travelling_sequential_value_correction)
target_sources(TravellingThiefSolver_packing_while_travelling_sequential_value_correction PRIVATE
    sequential_value_correction.cpp)
target_include_directories(TravellingThiefSolver_packing_while_travelling_sequential_value_correction PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TravellingThiefSolver_packing_while_travelling_sequential_value_correction PUBLIC
    TravellingThiefSolver_packing_while_travelling
    KnapsackSolver::knapsack::dynamic_programming_primal_dual)
add_library(TravellingThiefSolver::packing_while_travelling::sequential_value_correction ALIAS TravellingThiefSolver_packing_while_travelling_sequential_value_correction)

add_library(TravellingThiefSolver_packing_while_travelling_dynamic_programming)
target_sources(TravellingThiefSolver_packing_while_travelling_dynamic_programming PRIVATE
    dynamic_programming.cpp)
target_include_directories(TravellingThiefSolver_packing_while_travelling_dynamic_programming PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TravellingThiefSolver_packing_while_travelling_dynamic_programming PUBLIC
    TravellingThiefSolver_packing_while_travelling)
add_library(TravellingThiefSolver::packing_while_travelling::dynamic_programming ALIAS TravellingThiefSolver_packing_while_travelling_dynamic_programming)

add_library(TravellingThiefSolver_packing_while_travelling_efficient_local_search)
target_sources(TravellingThiefSolver_packing_while_travelling_efficient_local_search PRIVATE
    efficient_local_search.cpp)
target_include_directories(TravellingThiefSolver_packing_while_travelling_efficient_local_search PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TravellingThiefSolver_packing_while_travelling_efficient_local_search PUBLIC
    TravellingThiefSolver_packing_while_travelling
    TravellingThiefSolver_packing_while_travelling_sequential_value_correction)
add_library(TravellingThiefSolver::packing_while_travelling::efficient_local_search ALIAS TravellingThiefSolver_packing_while_travelling_efficient_local_search)

add_library(TravellingThiefSolver_packing_while_travelling_large_neighborhood_search)
target_sources(TravellingThiefSolver_packing_while_travelling_large_neighborhood_search PRIVATE
    large_neighborhood_search.cpp)
target_include_directories(TravellingThiefSolver_packing_while_travelling_large_neighborhood_search PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TravellingThiefSolver_packing_while_travelling_large_neighborhood_search PUBLIC
    TravellingThiefSolver_packing_while_travelling
    TravellingThiefSolver_packing_while_travelling_greedy
    TravellingThiefSolver_packing_while_travelling_sequential_value_correction)
add_library(TravellingThiefSolver::packing_while_travelling::large_neighborhood_search ALIAS TravellingThiefSolver_packing_while_travelling_large_neighborhood_search)
